--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          തറക്കല്ല്‌
-description:    "Minimal Jekyll theme for storytellers"
+description:    "oru blog"
 baseurl:        "/"
 url:            "https://chesterhow.github.io"
 
