--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ google_analytics: UA—XXXXXXXX-X
 # Author
 author:
   name:         Vinu K
-  url:          https://gnulinuxmate.com
+  url:          https://gnulinuxmate.com/
   email:        vinu@gnulinuxmate.com
 
 # Build settings
