--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Second Language
 description:    "A typical malayalam blog"
 baseurl:        "/secondlanguage"
-url:            "https://kevy-vinu.github.io/secondlanguage"
+url:            "https://kevy-vinu.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
