--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          തേ.ങ്ങ
+title:          ക.ഖ.ഗ
 description:    "A typical malayalam blog"
 baseurl:        "/"
 url:            "https://kevy-vinu.github.io"
