--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          നാര.ങ്ങ :lemon:
+title:          "നാര.ങ്ങ :lemon:"
 description:    "A typical malayalam blog"
 baseurl:        "/"
 url:            "https://kevy-vinu.github.io"
