--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          "നാര.ങ്ങ :lemon:"
+title:          "നാര.ങ്ങ"
 description:    "A good collection of short stories"
 baseurl:        "/"
 url:            "https://naran.ga"
