--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          "നാര.ങ്ങ"
-description:    "A good collection of short stories"
+description:    "A good collection of malayalam short stories."
 baseurl:        "/"
 url:            "https://naran.ga"
 
