--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          "നാര.ങ്ങ"
+title:          "naran.ga"
 description:    "A good collection of malayalam short stories."
 baseurl:        "/"
 url:            "https://naran.ga"
