--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          "naran.ga"
-description:    "A good collection of malayalam short stories."
+description:    "A personal blog of Keerthana."
 baseurl:        "/"
 url:            "https://naran.ga"
 
